--- a/gitops/argo-apps/service-mesh-control-plane-app.yaml
+++ b/gitops/argo-apps/service-mesh-control-plane-app.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: service-mesh-control-plane
-  namespace: istio-system
+  namespace: openshift-gitops
   finalizers:
     - resources-finalizer.argocd.argoproj.io
   labels:
