--- a/service-mesh/control-plane/project.yaml
+++ b/service-mesh/control-plane/project.yaml
@@ -2,6 +2,8 @@ apiVersion: project.openshift.io/v1
 kind: Project
 metadata:
   name: istio-system
+  labels: 
+    argocd.argoproj.io/managed-by: openshift-gitops
 spec:
   finalizers:
   - kubernetes
