--- a/sample-app/k8s_resources/deployment.yaml
+++ b/sample-app/k8s_resources/deployment.yaml
@@ -13,6 +13,8 @@ spec:
     metadata:
       labels: 
         app: sample-app
+    annotations:
+      sidecar.istio.io/inject: "true"
     spec:
       containers:
         - name: sample-app
