--- a/sample-app/k8s_resources/destination-rule.yaml
+++ b/sample-app/k8s_resources/destination-rule.yaml
@@ -3,7 +3,7 @@ kind: DestinationRule
 metadata:
   name: sample-app-dr
 spec:
-  host: sample-app.dev.svc.cluster.local
+  host: sample-app
   subsets:
   - name: v1
     labels:
