--- a/sample-app/k8s_resources/virtual-service.yaml
+++ b/sample-app/k8s_resources/virtual-service.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: dev
 spec:
   hosts: 
-  - "sample-app.dev.svc.cluster.local"
+  - sample-app
   gateways:
   - istio-gw
   http:
