--- a/sample-app/k8s_resources/gateway.yaml
+++ b/sample-app/k8s_resources/gateway.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.istio.io/v1beta1
 kind: Gateway
 metadata:
-  name: istio-gw
+  name: sample-app-gw
   namespace: dev
 spec:
   selector:
