set ImagePullPolicy to always

--- a/sample-app/k8s_resources/deployment-v1.yaml
+++ b/sample-app/k8s_resources/deployment-v1.yaml
@@ -21,7 +21,7 @@ spec:
       containers:
         - name: sample-app
           image: quay.io/raphael_tholl/sample-app:latest
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           ports: 
             - containerPort: 8080
           livenessProbe: 
