modified header key

--- a/sample-app/k8s_resources/virtual-service.yaml
+++ b/sample-app/k8s_resources/virtual-service.yaml
@@ -11,7 +11,7 @@ spec:
   http:
     - match:
         - headers:
-            env::
+            env:
               exact: "dev"
       route:
         - destination:
