add debug env variable

--- a/sample-app/k8s_resources/deployment-v4.yaml
+++ b/sample-app/k8s_resources/deployment-v4.yaml
@@ -27,6 +27,8 @@ spec:
           env:
           - name: VERSION
             value: mirror
+          - name: DEBUG
+            value: true
           livenessProbe: 
             httpGet:
               path: /healthz
