true from bool to string

--- a/sample-app/k8s_resources/deployment-v4.yaml
+++ b/sample-app/k8s_resources/deployment-v4.yaml
@@ -28,7 +28,7 @@ spec:
           - name: VERSION
             value: mirror
           - name: DEBUG
-            value: true
+            value: "true"
           livenessProbe: 
             httpGet:
               path: /healthz
