--- a/gitops/subscription.yaml
+++ b/gitops/subscription.yaml
@@ -2,7 +2,7 @@ apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
   name: openshift-gitops-operator
-  namespace: openshift-operators
+  namespace: openshift-operators # No OperatorGroup required, since openshift-operators already has one.
 spec:
   channel: latest 
   installPlanApproval: Automatic
