--- a/gitops/argo-apps/service-mesh-control-plane-app.yaml
+++ b/gitops/argo-apps/service-mesh-control-plane-app.yaml
@@ -19,6 +19,8 @@ spec:
     automated: 
       prune: true 
       selfHeal: true 
+    syncOptions:
+      - CreateNamespace=true
     retry:
       limit: 5 
       backoff:
