add ns to serviceentry

--- a/service-mesh/control-plane/service-entry.yaml
+++ b/service-mesh/control-plane/service-entry.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.istio.io/v1beta1
 kind: ServiceEntry
 metadata:
   name: instana-resources
+  namespace: istio-system
 spec:
   hosts:
   - ingress-orange-saas.instana.io
