--- a/sample-app/k8s_resources/destinationrule.yaml
+++ b/sample-app/k8s_resources/destinationrule.yaml
@@ -2,6 +2,9 @@ apiVersion: networking.istio.io/v1beta1
 kind: DestinationRule
 metadata:
   name: sample-app-dr
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   host: sample-app.dev.svc.cluster.local
   subsets:
