--- a/sample-app/k8s_resources/deployment-v1.yaml
+++ b/sample-app/k8s_resources/deployment-v1.yaml
@@ -4,6 +4,9 @@ metadata:
   name: sample-app-v1
   labels:
     app: sample-app-v1
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   replicas: 1
   selector:
