--- a/sample-app/k8s_resources/namespace.yaml
+++ b/sample-app/k8s_resources/namespace.yaml
@@ -2,5 +2,7 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: dev
+  annotations:
+    argocd.argoproj.io/sync-wave: "0"
   labels:
     argocd.argoproj.io/managed-by: openshift-gitops
