--- a/sample-app/k8s_resources/serviceaccount.yaml
+++ b/sample-app/k8s_resources/serviceaccount.yaml
@@ -2,3 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: sample-app-sa
+  namespace: dev
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
+    argocd.argoproj.io/sync-wave: "1"
