--- a/sample-app/k8s_resources/virtual-service.yaml
+++ b/sample-app/k8s_resources/virtual-service.yaml
@@ -3,6 +3,9 @@ kind: VirtualService
 metadata:
   name: sample-app-v1-vs
   namespace: dev
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   hosts: 
   - "*"
