--- a/service-mesh/control-plane/namespace.yaml
+++ b/service-mesh/control-plane/namespace.yaml
@@ -2,5 +2,7 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: istio-system
+  annotations:
+    argocd.argoproj.io/sync-wave: "0"
   labels:
     argocd.argoproj.io/managed-by: openshift-gitops
