--- a/service-mesh/control-plane/rolebinding.yaml
+++ b/service-mesh/control-plane/rolebinding.yaml
@@ -3,6 +3,9 @@ kind: RoleBinding
 metadata:
   name: gitops-admin-rolebinding
   namespace: istio-system
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
+    argocd.argoproj.io/sync-wave: "1"
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
