--- a/service-mesh/control-plane/sm-control-plane.yaml
+++ b/service-mesh/control-plane/sm-control-plane.yaml
@@ -3,6 +3,9 @@ kind: ServiceMeshControlPlane
 metadata:
   name: basic
   namespace: istio-system
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   tracing:
     type: Jaeger
