--- a/service-mesh/control-plane/sm-member-role.yaml
+++ b/service-mesh/control-plane/sm-member-role.yaml
@@ -3,6 +3,9 @@ kind: ServiceMeshMemberRoll
 metadata:
   name: default
   namespace: istio-system
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   members:
     - dev
