--- a/sample-app/Containerfile
+++ b/sample-app/Containerfile
@@ -1,23 +1,29 @@
 # BUILD STAGE
-# Node.js 18.16.1
-FROM node@sha256:35b6b9bf7880fa8a333820d5c296076a35207c477baf0b359e307927ea2a43e3 as builder
+# Node.js 18.20.4
+FROM node@sha256:a7ff16657263663c1e92ba3060cdbba0e77329a0a4cb3c27bbbbe90c6e20bd87 as builder
 
 WORKDIR /app
 
-COPY ["package.json", "app.js", "/app/"]
+# Check .dockerignore for details
+COPY . .
 
-RUN npm install --production
+RUN npm install --no-fund &&\
+    npm run build
 
 # RUN STAGE
-# Node.js 18.16.1-alpine
-FROM node@sha256:bf6c61feabc1a1bd565065016abe77fa378500ec75efa67f5b04e5e5c4d447cd
+# Node.js 18.20.4-alpine
+FROM node@sha256:17514b20acef0e79691285e7a59f3ae561f7a1702a9adc72a515aef23f326729
 
 LABEL maintainer="Raphael Tholl raphael.tholl@ibm.com"
 
+ENV NODE_ENV=production
+
 WORKDIR /app
 
-COPY --from=builder /app .
-COPY routes/ /app/routes
+COPY --from=builder /app/dist ./dist
+COPY --from=builder /app/package*.json ./
+
+RUN npm install --no-fund --production
 
 EXPOSE 8080
 
@@ -25,4 +31,4 @@ RUN chown -R node:node /app
 
 USER node
 
-CMD ["node", "app.js"]
+CMD ["node", "dist/app.js"]
