--- a/sample-app/package.json
+++ b/sample-app/package.json
@@ -4,20 +4,28 @@
   "description": "sample app that can be configured via env variables. Purpose is to demonstrate different service mesh routing rules",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "dev": "ts-node src/app.ts",
+    "build": "tsc",
+    "start": "node dist/app.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/RapTho/service-mesh-demo.git"
+    "url": "git+https://github.com/RapTho/gitops-service-mesh-demo.git"
   },
   "author": "Raphael Tholl",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/RapTho/service-mesh-demo/issues"
+    "url": "https://github.com/RapTho/gitops-service-mesh-demo/issues"
   },
-  "homepage": "https://github.com/RapTho/service-mesh-demo#readme",
+  "homepage": "https://github.com/RapTho/gitops-service-mesh-demo#readme",
   "dependencies": {
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^22.3.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
   }
 }
