--- a/gitops/argo-apps/service-mesh-control-plane-app.yaml
+++ b/gitops/argo-apps/service-mesh-control-plane-app.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: service-mesh-control-plane
   namespace: openshift-gitops
+  annotations:
+    argocd.argoproj.io/sync-wave: "0"
   finalizers:
     - resources-finalizer.argocd.argoproj.io
   labels:
