--- a/sample-app/k8s_resources/namespace.yaml
+++ b/sample-app/k8s_resources/namespace.yaml
@@ -5,6 +5,6 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "1"
     operator.tekton.dev/prune.keep: "3"
-    operator.tekton.dev/prune.keep-since: "60"
+    operator.tekton.dev/prune.schedule: "10"
   labels:
     argocd.argoproj.io/managed-by: openshift-gitops
