add env variable VERSION=v5

--- a/sample-app/k8s_resources/deployment-v5.yaml
+++ b/sample-app/k8s_resources/deployment-v5.yaml
@@ -34,6 +34,9 @@ spec:
           imagePullPolicy: Always
           ports: 
             - containerPort: 8080
+          env:
+          - name: VERSION
+            value: v5
           livenessProbe: 
             httpGet:
               path: /healthz
