added retry policy to v6

--- a/sample-app/k8s_resources/virtual-service.yaml
+++ b/sample-app/k8s_resources/virtual-service.yaml
@@ -44,6 +44,10 @@ spec:
     match:
     - uri:
         exact: "/api/v1/fail"
+    retries:
+      attempts: 5
+      perTryTimeout: 2s
+      retryOn: "5xx,retriable-4xx"
     route:
     - destination:
         host: sample-app
