--- a/sample-app/Containerfile
+++ b/sample-app/Containerfile
@@ -4,7 +4,7 @@ FROM node@sha256:a7ff16657263663c1e92ba3060cdbba0e77329a0a4cb3c27bbbbe90c6e20bd8
 
 WORKDIR /app
 
-# Check .dockerignore for details
+# Check .dockerignore for what's ignored
 COPY . .
 
 RUN npm install --no-fund &&\
