add namespace in metadata

--- a/ci/tektonConfig.yaml
+++ b/ci/tektonConfig.yaml
@@ -2,6 +2,7 @@ apiVersion: operator.tekton.dev/v1alpha1
 kind: TektonConfig
 metadata:
   name: config
+  namespace: dev
 spec:
   pruner:
     disabled: false
