added fully qualified service name

--- a/sample-app/k8s_resources/destinationrule.yaml
+++ b/sample-app/k8s_resources/destinationrule.yaml
@@ -7,7 +7,7 @@ metadata:
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
     argocd.argoproj.io/sync-wave: "2"
 spec:
-  host: sample-app
+  host: sample-app.dev.svc.cluster.local
   trafficPolicy:
     tls:
       mode: ISTIO_MUTUAL
