modified certs secret name

--- a/service-mesh/control-plane/gateway.yaml
+++ b/service-mesh/control-plane/gateway.yaml
@@ -16,6 +16,6 @@ spec:
         protocol: HTTPS
       tls:
         mode: SIMPLE
-        credentialName: letsencrypt-certs
+        credentialName: ingress-certs
       hosts:
         - "*"
