--- a/service-mesh/control-plane/gateway.yaml
+++ b/service-mesh/control-plane/gateway.yaml
@@ -11,15 +11,11 @@ spec:
     istio: ingressgateway
   servers:
     - port:
-        number: 80
-        name: http
-        protocol: HTTP
-    # - port:
-    #     number: 443
-    #     name: https
-    #     protocol: HTTPS
-      # tls:
-      #   mode: SIMPLE
-      #   credentialName: ingress-certs
+        number: 443
+        name: https
+        protocol: HTTPS
+      tls:
+        mode: SIMPLE
+        credentialName: istio-ingressgateway-certs
       hosts:
         - "*"
