redirect http to https

--- a/service-mesh/control-plane/gateway.yaml
+++ b/service-mesh/control-plane/gateway.yaml
@@ -11,6 +11,12 @@ spec:
     istio: ingressgateway
   servers:
     - port:
+        number: 80
+        name: http
+        protocol: http
+      tls:
+        httpsRedirect: true
+    - port:
         number: 443
         name: https
         protocol: HTTPS
