--- a/service-mesh/control-plane/gateway.yaml
+++ b/service-mesh/control-plane/gateway.yaml
@@ -22,6 +22,6 @@ spec:
         protocol: HTTPS
       tls:
         mode: SIMPLE
-        credentialName: istio-ingressgateway-certs
+        credentialName: istio-ca-secret
       hosts:
         - "*"
