add host to http server

--- a/service-mesh/control-plane/gateway.yaml
+++ b/service-mesh/control-plane/gateway.yaml
@@ -16,6 +16,8 @@ spec:
         protocol: http
       tls:
         httpsRedirect: true
+      hosts:
+        - "*"
     - port:
         number: 443
         name: https
