--- a/service-mesh/control-plane/gateway.yaml
+++ b/service-mesh/control-plane/gateway.yaml
@@ -24,6 +24,6 @@ spec:
         protocol: HTTPS
       tls:
         mode: SIMPLE
-        credentialName: openshift-ingress/letsencrypt-certs
+        credentialName: ingress-gateway-certs
       hosts:
         - "*"
