--- a/sample-app/k8s_resources/destinationrule.yaml
+++ b/sample-app/k8s_resources/destinationrule.yaml
@@ -8,9 +8,9 @@ metadata:
     argocd.argoproj.io/sync-wave: "2"
 spec:
   host: sample-app
-  trafficPolicy:
-    tls:
-      mode: ISTIO_MUTUAL
+  # trafficPolicy:
+  #   tls:
+  #     mode: ISTIO_MUTUAL
   subsets:
   - name: v1
     labels:
