--- a/service-mesh/control-plane/gateway.yaml
+++ b/service-mesh/control-plane/gateway.yaml
@@ -14,16 +14,16 @@ spec:
         number: 80
         name: http
         protocol: http
-      tls:
-        httpsRedirect: true
+      # tls:
+      #   httpsRedirect: true
       hosts:
         - "*"
-    - port:
-        number: 443
-        name: https
-        protocol: HTTPS
-      tls:
-        mode: SIMPLE
-        credentialName: ingress-gateway-certs
-      hosts:
-        - "*"
+    # - port:
+    #     number: 443
+    #     name: https
+    #     protocol: HTTPS
+    #   tls:
+    #     mode: SIMPLE
+    #     credentialName: ingress-gateway-certs
+    #   hosts:
+    #     - "*"
